[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "screener-mcp"
version = "0.1.0"
description = "Indian Stock Research MCP server powered by Screener.in"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
screener-mcp = "screener_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
